# componentize-py-http

./: .gitignore  Cargo.toml  Makefile  README.md  hello_http_app.py  hello_poll_loop.py  hello_requests.py
hello_http/: __init__.py
hello_http/imports/: outgoing_handler.py  streams.py  types.py
src/: main.rs
wit/: hello-http.wit
