[package]
name = "wasmtime-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
anyhow = "1.0.65"
cap-std = "2.0.0"
tokio = { version = "1.36.0", features = ["fs", "process", "macros", "rt-multi-thread"] }
wasmtime = { version = "17.0.0", features = ["component-model"] }
wasmtime-wasi =  "17.0.0"
wasmtime-wasi-http = "17.0.0"
